# test-repo

ebprocess-development/: .env.example  .gitignore  Architecture.md  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  langgraph.json  pyproject.toml  run_server.sh  system_flow.md
ebprocess-development/.agents/: AGENTS.md
ebprocess-development/.opencode/agents/: api_bug_fixer.md  api_builder.md  api_contract_verifier.md  api_dto_generator.md  api_linter.md  api_localization.md  api_module_integrator.md  api_planner.md  api_route_builder.md  api_schema_builder.md  api_service_builder.md  flutter_bug_fixer.md  flutter_builder.md  flutter_data.md  flutter_design_system.md  flutter_domain.md  flutter_figma_assets.md  flutter_graphql.md  flutter_linter.md  flutter_localization.md  flutter_planner.md  flutter_state.md  flutter_ui.md  flutter_ui_refiner.md  multi_agent_orchestrator.md  web_bug_fixer.md  web_builder.md  web_design_system.md  web_linter.md  web_localization.md  web_planner.md  web_ui_refiner.md
ebprocess-development/.opencode/skills/web-scaffolder/: SKILL.md
ebprocess-development/.opencode/skills/web-state-management/: SKILL.md
ebprocess-development/spoq/: ROADMAP.md
ebprocess-development/spoq/Epic-44445/: EPIC.md  api-impl-41831.yml  contract-41831.yml  flutter-impl-41831.yml  integration-41831.yml
ebprocess-development/src/ebdev/: __init__.py  config.py
ebprocess-development/src/ebdev/api/: __init__.py  main.py
ebprocess-development/src/ebdev/config/: __init__.py
ebprocess-development/src/ebdev/core/: __init__.py  constants.py  exceptions.py  graph.py  logger.py  name_utils.py  spoq_map.py  spoq_utils.py  telemetry.py  throttle.py
ebprocess-development/src/ebdev/core/nodes/: __init__.py  common.py  contract.py  finalize.py  generate.py  orchestrate.py  plan.py  preflight.py  prepare.py  publish.py  repair.py  strategize.py  validate.py
ebprocess-development/src/ebdev/models/: __init__.py  graph_state.py  schemas.py  spoq.py  task.py  ticket.py
ebprocess-development/src/ebdev/services/: checkpoint.py  db.py  epic_state.py  flutter_cmd.py  fs.py  git.py  opencode.py  prompts.py  starter.py
ebprocess-development/src/ebdev/services/opencode/: __init__.py  client.py  context_writer.py  orchestrator.py  service.py
ebprocess-development/src/ebprocess_development.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ebprocess-development/test/: dummy_request.json  test_json_contract.py  test_live_pipeline.py  test_map_contract.py  test_opencode_api.py  test_pipeline.py
ebprocess-development/test/mock_repo/api/: nest-cli.json  package.json  tsconfig.json
ebprocess-development/test/mock_repo/api/apps/api/: tsconfig.app.json
ebprocess-development/test/mock_repo/api/apps/api/src/: app.module.ts
ebprocess-development/test/mock_repo/api/libs/data-access/src/: data-access.models.ts  data-access.module.ts  index.ts
ebprocess-development/tests/: conftest.py  dummy_request.json  task_planning.json  test_pipeline.py
ebprocess-development/tests/core/: test_config.py  test_logger.py  test_throttle.py
ebprocess-development/tests/models/: test_map_contract.py
ebprocess-development/tests/services/: test_fs_service.py  test_opencode_api.py
lightrag-server/: .env.example  .gitignore  Makefile  README.md  api-guide.md  integration.md  (+2 more)
(+9 files in other folders)
