[project]
name = "ebprocess-development"
version = "0.1.0"
description = "Multi-platform autonomous coding workspace using LangGraph and OpenCode"
dependencies = [
    "langgraph>=0.1.0",
    "langgraph-cli[inmem]>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
]
