[project]
name = "ebprocess-development"
version = "0.1.0"
description = "Multi-platform autonomous coding workspace using LangGraph and OpenCode"
dependencies = [
    "langgraph>=0.1.0",
    "langgraph-cli[inmem]>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.pyright]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[tool.pylint.main]
source-roots = ["src"]
init-hook='import sys, os; sys.path.insert(0, os.path.abspath("src"))'
